WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154708
RenderTheme::controlSize* methods should take const RenderStyle&.
https://bugs.webkit.org/show_bug.cgi?id=154708
Summary
RenderTheme::controlSize* methods should take const RenderStyle&.
alan
Reported
2016-02-25 18:45:00 PST
and not non-const.
Attachments
Patch
(13.59 KB, patch)
2016-02-25 18:49 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(14.90 KB, patch)
2016-02-26 09:22 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-02-25 18:49:54 PST
Created
attachment 272277
[details]
Patch
Darin Adler
Comment 2
2016-02-26 08:11:29 PST
Comment on
attachment 272277
[details]
Patch RenderThemeIOS.h:42:17: error: 'popupInternalPaddingRight' marked 'override' but does not override any member functions virtual int popupInternalPaddingRight(RenderStyle&) const override;
alan
Comment 3
2016-02-26 09:22:29 PST
Created
attachment 272328
[details]
Patch
WebKit Commit Bot
Comment 4
2016-02-26 09:35:58 PST
Comment on
attachment 272328
[details]
Patch Clearing flags on attachment: 272328 Committed
r197170
: <
http://trac.webkit.org/changeset/197170
>
WebKit Commit Bot
Comment 5
2016-02-26 09:36:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug