Source/WebCore/rendering/RenderThemeMac.h
@@ -66,7 +66,7 @@ public:
 
     virtual void platformColorsDidChange() override;
 
-    virtual int minimumMenuListSize(RenderStyle&) const override;
+    virtual int minimumMenuListSize(const RenderStyle&) const override;
 
     virtual void adjustSliderThumbSize(RenderStyle&, Element*) const override;
 
@@ -75,10 +75,10 @@ public:
     virtual int sliderTickOffsetFromTrackCenter() const override;
 #endif
 
-    virtual int popupInternalPaddingLeft(RenderStyle&) const override;
-    virtual int popupInternalPaddingRight(RenderStyle&) const override;
-    virtual int popupInternalPaddingTop(RenderStyle&) const override;
-    virtual int popupInternalPaddingBottom(RenderStyle&) const override;
+    virtual int popupInternalPaddingLeft(const RenderStyle&) const override;
+    virtual int popupInternalPaddingRight(const RenderStyle&) const override;
+    virtual int popupInternalPaddingTop(const RenderStyle&) const override;
+    virtual int popupInternalPaddingBottom(const RenderStyle&) const override;
     virtual PopupMenuStyle::PopupMenuSize popupMenuSize(const RenderStyle&, IntRect&) const override;
 
     virtual bool popsMenuByArrowKeys() const override { return true; }
@@ -175,13 +175,13 @@ private:
     virtual Color systemColor(CSSValueID) const override;
 
     // Get the control size based off the font. Used by some of the controls (like buttons).
-    NSControlSize controlSizeForFont(RenderStyle&) const;
-    NSControlSize controlSizeForSystemFont(RenderStyle&) const;
+    NSControlSize controlSizeForFont(const RenderStyle&) const;
+    NSControlSize controlSizeForSystemFont(const RenderStyle&) const;
     NSControlSize controlSizeForCell(NSCell*, const IntSize* sizes, const IntSize& minSize, float zoomLevel = 1.0f) const;
     void setControlSize(NSCell*, const IntSize* sizes, const IntSize& minSize, float zoomLevel = 1.0f);
     void setSizeFromFont(RenderStyle&, const IntSize* sizes) const;
-    IntSize sizeForFont(RenderStyle&, const IntSize* sizes) const;
-    IntSize sizeForSystemFont(RenderStyle&, const IntSize* sizes) const;
+    IntSize sizeForFont(const RenderStyle&, const IntSize* sizes) const;
+    IntSize sizeForSystemFont(const RenderStyle&, const IntSize* sizes) const;
     void setFontFromControlSize(StyleResolver&, RenderStyle&, NSControlSize) const;
 
     void updateCheckedState(NSCell*, const RenderObject&);
@@ -217,7 +217,7 @@ private:
     NSLevelIndicatorCell *levelIndicatorFor(const RenderMeter&) const;
 #endif
 
-    int minimumProgressBarHeight(RenderStyle&) const;
+    int minimumProgressBarHeight(const RenderStyle&) const;
     const IntSize* progressBarSizes() const;
     const int* progressBarMargins(NSControlSize) const;
 
